Fix header spacing

--- a/style/generic.scss
+++ b/style/generic.scss
@@ -21,13 +21,12 @@ nav
 {
   float: right;
   display: inline-block;
-  height: 1.45em;
-  line-height: 1.45em;
+  line-height: 1.5em;
   text-align: right;
 
   a {
     display: inline-block;
-    margin: 0 1rem;
+    margin: 0 0 0 1.62em;
   }
 }
 
